--- a/leetcode/.settings/org.eclipse.core.resources.prefs
+++ b/leetcode/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/array/MajorityElement.java=UTF-8
+encoding//src/binarySearch/FindPeakElement.java=UTF-8
 encoding//src/dynamicProgramming/MaximumSubarray.java=UTF-8
