--- a/practice/.settings/org.eclipse.core.resources.prefs
+++ b/practice/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/array/MajorityElement.java=UTF-8
+encoding//src/array/MinimumSizeSubarraySum.java=UTF-8
 encoding//src/array/NextPermutation.java=UTF-8
 encoding//src/backTracking/CombinationSum.java=UTF-8
 encoding//src/backTracking/CombinationSumII.java=UTF-8
