finish majority element(169, leetcode)

--- a/practice/.settings/org.eclipse.core.resources.prefs
+++ b/practice/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//jiabug/BitManipulation/MajorityElement.java=UTF-8
 encoding//src/array/MajorityElement.java=UTF-8
 encoding//src/array/MinimumSizeSubarraySum.java=UTF-8
 encoding//src/array/NextPermutation.java=UTF-8
