finish reorder list(143, leetcode)

--- a/practice/.settings/org.eclipse.core.resources.prefs
+++ b/practice/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//jiabug/BitManipulation/MajorityElement.java=UTF-8
 encoding//jiabug/LinkedList/IntersectionOfTwoLinkedLists.java=UTF-8
+encoding//jiabug/LinkedList/ReorderList.java=UTF-8
+encoding//jiabug/LinkedList/ReverseLinkedList.java=UTF-8
 encoding//src/array/MajorityElement.java=UTF-8
 encoding//src/array/MinimumSizeSubarraySum.java=UTF-8
 encoding//src/array/NextPermutation.java=UTF-8
